objects/EUMIR_support__c.object
<CustomObject>
    <description>EUMIR support object to hold the Authorised representative information, Competent authority information, Manufacturer information</description>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_first_Name__c</fullName>
        <label>Contact first Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_last_name__c</fullName>
        <label>Contact last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_number__c</fullName>
        <label>Street number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Submitters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>organisation_Name__c</fullName>
        <label>organisation Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>organisation_Name</valueSetName>
        </valueSet>
    </fields>
    <label>EUMIR support</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>organisation_Name__c</columns>
        <columns>Type__c</columns>
        <columns>City_Name__c</columns>
        <columns>Contact_first_Name__c</columns>
        <columns>Contact_last_name__c</columns>
        <columns>Country__c</columns>
        <columns>E_mail__c</columns>
        <columns>Phone__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Street__c</columns>
        <columns>Street_number__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EU-{0000}</displayFormat>
        <label>EUMIR support  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUMIR support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>